# lenia-rs

./: Cargo.toml  README.md  rust-toolchain.toml
src/: cell.rs  fft.rs  grid.rs  kernels.rs  lenias.rs  lib.rs  main.rs  tensor.rs  utils.rs
src/creatures/: mod.rs  orbium.rs
src/games/: lenia.rs  mod.rs
src/kernels/: lenia.rs  mod.rs
