[package]
name = "road_to_lenia"
version = "0.1.0"
authors = ["Zoran <lazovicff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
rayon = "1.8.0"
rand = "0.8.5"
itertools = "0.12.0"
rustfft = "6.1.0"
fft2d = { version = "0.1.1", features = ["nalgebra"] }
nalgebra = { version = "0.29.0", default-features = false, features = ["std"] }
