[package]
name = "road_to_lenia"
version = "0.1.0"
authors = ["Zoran <lazovicff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
ndarray = { version = "0.15.6", features = ["rayon"] }
rustfft = "6.1.0"
num-complex = "0.4.2"
png = "0.17.7"
rayon = "1.7.0"
